# jarvis

./: .gitignore  LICENSE  Makefile  PRD.md  README.md  SPEC.md  go.mod  go.sum  integration_test.go  pyproject.toml
cmd/jarvis/: hook_relay.go  main.go
cmd/sidecar/: main.go
cmd/watch/: main.go
docs/: ARCHITECTURE.md  session-id-detection-via-hook.md
internal/agent/: agent.go  agent_test.go
internal/autorename/: autorename.go  autorename_test.go  generator.go  title.go  title_test.go
internal/config/: config.go  config_test.go
internal/model/: session.go
internal/paths/: paths.go
internal/protocol/: messages.go
internal/searchindex/: db.go  db_test.go  extract.go  extract_test.go  fts5_smoke_test.go  index.go  index_test.go  search.go  search_test.go
internal/session/: attach.go  jsonl.go  manager.go  manager_test.go  resume.go
internal/sidecar/: daemon.go  daemon_test.go  policy.go  policy_test.go  ringbuf.go  status.go  status_test.go
internal/store/: folder.go  session.go  session_test.go
internal/tui/: builder.go  builder_test.go  commands.go  dashboard.go  focus.go  focus_test.go  item.go  multiplexer.go  multiplexer_render_test.go  multiplexer_test.go  search.go  search_test.go  sidebar.go  sidebar_test.go  statusbar.go  styles.go  (+4 more)
jarvis/: app.py  commands.py  config.py  display.py  enrichment.py  launcher.py  models.py  store.py  task_cli.py  worktree.py
testdata/: mock_claude.go
tests/: test_app.py  test_commands.py  test_display.py  test_enrichment.py  test_models.py  test_store.py
v2/: .gitignore  go.mod  go.sum  mock_claude
(+54 files in other folders)
